compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__one.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 22
expression: "\npub fn go() {\n  <<256>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  <<256>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go() {
  return toBitArray([0]);
}
