compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__pattern_match_size_arithmetic.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2651
expression: "\npub fn wibble(bits, wobble) {\n  case bits {\n    <<_:size(1), _:size(wobble - 1), _:bits>> -> 0\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn wibble(bits, wobble) {
  case bits {
    <<_:size(1), _:size(wobble - 1), _:bits>> -> 0
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
export function wibble(bits, wobble) {
  if (bits.bitSize >= 1 && wobble - 1 >= 0 && bits.bitSize >= 1 + wobble - 1) {
    return 0;
  } else {
    return 1;
  }
}
